@@ -12,6 +12,7 @@
   <include package="intranett.theme" />
 
   <include package=".browser" />
+  <include package=".upgrades" />
   <include file="profile.zcml" />
 
 </configure>
