@@ -1,0 +1,5 @@
+
+
+def null_upgrade_step(tool):
+    """This is a null upgrade, use it when nothing happens."""
+    pass
